# clipboard-manager

./: .gitignore  .prettierignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV.md  README.md  STABILITY_FIXES.md  build.rs  clipboard-manager-db-1.sqlite  clipboard-manager-db-test.sqlite  cosmic-clipboard-manager.spec  f.html  flatpak_schema.json  io.github.wiiznokes.cosmic-ext-applet-clipboard-manager.json  justfile  note
.cargo/: config.toml
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  flatpak_bundle.yml  prettier.yml  release.yml
db/: Cargo.toml
db/src/: lib.rs
docs/plans/: 2026-02-12-cursor-position-popup-design.md
i18n/ar/: cosmic_ext_applet_clipboard_manager.ftl
i18n/bg/: cosmic_ext_applet_clipboard_manager.ftl
i18n/cs/: cosmic_ext_applet_clipboard_manager.ftl
i18n/de/: cosmic_ext_applet_clipboard_manager.ftl
i18n/en/: cosmic_ext_applet_clipboard_manager.ftl
i18n/es/: cosmic_ext_applet_clipboard_manager.ftl
i18n/fr/: cosmic_clipboard_manager.ftl  cosmic_ext_applet_clipboard_manager.ftl
i18n/hu/: cosmic_ext_applet_clipboard_manager.ftl
i18n/it/: cosmic_ext_applet_clipboard_manager.ftl
i18n/nl/: cosmic_ext_applet_clipboard_manager.ftl
i18n/pl/: cosmic_ext_applet_clipboard_manager.ftl
i18n/pt-BR/: cosmic_ext_applet_clipboard_manager.ftl
i18n/ru/: cosmic_ext_applet_clipboard_manager.ftl
i18n/sv/: cosmic_ext_applet_clipboard_manager.ftl
i18n/uk/: cosmic_ext_applet_clipboard_manager.ftl
i18n/zh-CN/: cosmic_ext_applet_clipboard_manager.ftl
migrations/: 20240723123147_init.sql  20240929151638_favorite.sql  20250208000000_add_favorite_title.sql
res/: config_schema.json  data_control_explication.md  desktop_entry.desktop  env.conf  env.sh  metainfo.xml
resources/: com.wiiznokes.CosmicClipboardManager.desktop
src/: ai.rs  app.rs  clipboard.rs  clipboard_watcher.rs  config.rs  db.rs  db2.rs  db3  db_test.sql  dbus.rs  editor_app.rs  editor_ipc.rs  favorites_app.rs  icon.rs  ipc.rs  localize.rs  main.rs  message.rs  navigation.rs  selection_buffer.rs  toggle_signal.rs  utils.rs  view.rs  window.rs
src/db/: db_test.sql  mod.rs  sqlite_db.rs  test.rs
src/my_widget/: context_menu.rs  mod.rs
