[package]
name = "cosmic-ext-applet-clipboard-manager"
version = "0.1.0"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2024"
license = "GPL-3.0"
homepage = "https://github.com//cosmic-utils/clipboard-manager/"
repository = "https://github.com//cosmic-utils/clipboard-manager.git"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed"] }

derivative = "2"
os_pipe = "1"
thiserror = "2"
paste = "1"
directories = "6"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
mime = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
tracing-journald = "0.3"
constcat = "0.6"
nucleo = "0.5"
futures = "0.3"
include_dir = "0.7"
itertools = "0.14"
alive_lock_file = "0.2"
regex = "1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland", "qr_code"]

[dependencies.wl-clipboard-rs]
git = "https://github.com/wiiznokes/wl-clipboard-rs.git"
branch = "watch"


[dev-dependencies]
serial_test = "3"
configurator_schema = { git = "https://github.com/cosmic-utils/configurator.git" }


[profile.release-lto]
inherits = "release"
lto = "fat"

# [patch."https://github.com/pop-os/libcosmic".libcosmic]
# git = "https://github.com/wiiznokes/libcosmic"
# branch = "fix_qr_code_theme"
# path = "../libcosmic"

# [patch."https://github.com/wiiznokes/wl-clipboard-rs.git".wl-clipboard-rs]
# path = "../wl-clipboard-rs"


[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

[patch.crates-io.alive_lock_file]
git = "https://github.com/wiiznokes/alive_lock_file"
branch = "master"
# path = "../alive_lock_file"
