[package]
name = "cosmic-ext-applet-clipboard-manager"
version = "0.1.0"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2024"
license = "GPL-3.0"
homepage = "https://github.com//cosmic-utils/clipboard-manager/"
repository = "https://github.com//cosmic-utils/clipboard-manager.git"
rust-version = "1.88"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [] }

i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed"] }

thiserror = "2"
paste = "1"
directories = "6"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
mime = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
fslock = "0.2"
tracing-journald = "0.3"
constcat = "0.6"
nucleo = "0.5"
futures = "0.3"
include_dir = "0.7"
itertools = "0.14"
regex = "1"
open = "5"
notify = "7.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland", "qr_code", "markdown", "highlighter"]

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["macros"] }
# configurator_schema = { git = "https://github.com/cosmic-utils/configurator.git" }


[profile.release-lto]
inherits = "release"
lto = "fat"

# [patch."https://github.com/pop-os/libcosmic".libcosmic]
# git = "https://github.com/wiiznokes/libcosmic"
# branch = "fix_qr_code_theme"
# path = "../libcosmic"

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
